# fiddler-chatbot

./: .coverage  .dockerignore  .env.template  .gitignore  Dockerfile  README-build-deploy.md  README.md  agentic_conversations.csv  build-and-deploy.sh  chainlit.md  config.py  crawl_fiddler_blog.ipynb  datastax-loader-new.ipynb  datastax.ipynb  docker-manager.sh  fiddler_chatbot_callback_handler.py  install_fiddler-langgraph.sh  lint.sh  load_env.sh  loader_cassandra_vector_index.ipynb  pinecone.ipynb  preprocessing_docs_cleaned.ipynb  pyproject.toml  pytest.ini  query_cassandra.ipynb  requirements.txt  requirements_for_agentic_chatbot.txt  run_tests.py  setup_dev.sh  streamlit_app_datastax.py  streamlit_app_pinecone.py  streamlit_chatbot.py  streamlit_hoster.py  streamlit_hoster_adv.py  test.sh
.chainlit/: .langchain.db  config.toml
.cursorrules/: README.md  README.mdc  ai_assistant.mdc  tool_diagram_assistant.mdc
.devcontainer/: README.md  devcontainer.json
.github/workflows/: build-and-push-ecr.yaml  workflow-test.yaml
.ipynb_checkpoints/: datastax-checkpoint.ipynb  query_cassandra-checkpoint.ipynb  requirements-checkpoint.txt  streamlit_app_datastax-checkpoint.py
.streamlit/: config.toml
data_generator/: README.md  batch_orchestrator.py  chat_simulator_agent.py  jailed_personas.json  personas.json  systemprompts.json  systemprompts.py  todo.md  validate_pipeline.py
data_generator/archived/: synth_user.ipynb
data_generator/data/: agentic_conversations.csv  chatbot_run_export.jsonl  chatbot_run_export_jailbreak.jsonl  chatbot_run_export_normal.jsonl  jailed_conversations.csv
datastax_auth/: danny@fiddler.ai-token.json
datastax_auth/secure-connect-fiddlerai/: cert  cert.pfx  config.json  cqlshrc  identity.jks  key  trustStore.jks
docs/: docker-utility.md  feature-chainlit_migration.md  feature-streamlit_chainlit_hosting.md  guardrails-deterministic-step-options.md  info--datastax-collections.md  plan--advanced_refactoring_for_cassandra_data_mgmt.md  plan--testing_framework.md  prd--agentic_chatbot.md  prd--agentic_chatbot.mdc  ref--ext--PII_guardrails_docs.md  ref--regex-patterns-for-md-cleaning.md  regex-patterns-for-markdown-cleaning.md  srcdoc--loader_cassandra_vector_index.py.md  srcdocs--build-deploy-script.md  srcdocs--chatbot-Architecture-walkthroug.md  srcdocs--chatbot-architecture-todo.md  srcdocs--vector-index-management-guide.md  test_logger_usage_examples.mdc  testing_framework.md  todo.md
docs/diagrams/: chatbot.md  chatbot_agentic.md  fiddler-monitoring-architecture.md  implementation-comparison-guide.md  system-architecture-overview.md  test_logger.md  vector_index_process.md
documentation_data/: vector_index_feed_23.5.csv  vector_index_feed_23.6.csv  vector_index_feed_23.7.csv  vector_index_feed_v24.19.csv
documentation_data/md-notebooks/: Fiddler_Newsgroups_DataGeneration.md  Fiddler_Quickstart_Add_Model_Artifact.md  Fiddler_Quickstart_DIY.md  Fiddler_Quickstart_IMDB_Onboarding.md  Fiddler_Quickstart_Image_Monitoring.md  Fiddler_Quickstart_Imbalanced_Data.md  Fiddler_Quickstart_Intersectionally_Unfair.md  Fiddler_Quickstart_NLP_Monitoring.md  Fiddler_Quickstart_NLP_OpenAI_Monitoring.md  Fiddler_Quickstart_NLP_multiclass.md  Fiddler_Quickstart_Ranking_Model.md  Fiddler_Quickstart_Simple_Monitoring.md  Fiddler_Quickstart_Surrogate_XAI.md
documentation_data/v23.5/: caveats.csv  release-235-notes.md
documentation_data/v23.7/: caveats.csv
documentation_data/v24.19/: .gitbook.yaml  .markdownlint.yaml  README.md  SUMMARY.md  feature-maturity-definitions.md  python-client-history.md
logs/cursor_logs/: README-test_pattern.mdc
notebooks/: agentic_conversations.csv  agentic_manager.py  agentic_user.py  bot_test.ipynb  jailed_personas.txt  manager.csv  personas.txt
preprocessing_readme/: Fiddler_content_embeddings_generator.ipynb  reading_fiddler_doc_caveats_urls.ipynb
preprocessing_readme/.ipynb_checkpoints/: Fiddler_content_embeddings_generator-checkpoint.ipynb  reading_fiddler_doc_caveats_urls-checkpoint.ipynb
public/: fiddler-theme.css  theme.json
src/: chatbot.py  chatbot_agentic.py  chatbot_chainlilt.py  chatbot_chainlit.py  chatbot_chainlit_react.py  config.py  data_generation.py  loader_cassandra_vector_index.py  preprocessing_docs_cleaned.py  streamlit_chatbot.py  system_instructions.md  system_instructions_AGENTIC.md  vector_index_mgmt.py
src/agentic_tools/: fiddler_gaurdrails.py  rag.py  state_data_model.py  validator_url.py
src/archived/: adhoc_db_query.ipynb  chatbot.py
src/fiddler_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/middleware/: README.md  __init__.py  fiddler_context_middleware.py
src/utils/: adhoc_db_query.ipynb  agentic_tools_test.ipynb  cassandra_compatibility.py  custom_logging.py  flatten_folders.py  guardrails_warmup.py  (+8 more)
tests/: README.md  __init__.py  conftest.py  test_guardrails_availability.py
(+1676 files in other folders)
