[project]
name = "fiddler-chatbot"
version = "0.1.0"
description = "Fiddler AI Model Monitoring Chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fiddler-client>=3.9.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.26",
    "tiktoken>=0.9.0",
    "python-dotenv>=1.1.1",
    "cassandra-driver>=3.29.2",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "pandas>=2.3.0",
    "openai>=1.92.1",
    "protobuf<=6.0.0",
    "bs4>=0.0.2",
    "feedparser>=6.0.9",
    "nbconvert>=7.16.6",
    "packaging>=24.2",
    "importlib-metadata>=8.7.0",
    "googleapis-common-protos>=1.70.0",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-http==1.34.1",
    "opentelemetry-instrumentation==0.55b1",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "langgraph>=0.5.1",
    "langgraph-cli>=0.3.4",
    "cassio>=0.1.10",
    "watchdog>=6.0.0",
    "ipykernel>=6.30.0",
    "chainlit>=2.6.5",
    "fiddler-langgraph>=0.1.0a16",
]

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"

authors = [
    {name = "Fiddler AI Team"},
]
maintainers = [
    {name = "Fiddler AI Team"},
]
package-mode = false
