[project]
name = "fiddler-chatbot"
version = "0.1.0"
description = "Fiddler AI Model Monitoring Chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fiddler-client>=3.9.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.26",
    "tiktoken>=0.9.0",
    "python-dotenv>=1.1.1",
    "cassandra-driver>=3.29.2",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "pandas>=2.3.0",
    "openai>=1.92.1",
    "protobuf<=6.0.0",
    "bs4>=0.0.2",
    "feedparser>=6.0.9",
    "nbconvert>=7.16.6",
    "packaging>=24.2",
    "importlib-metadata>=8.7.0",
    "googleapis-common-protos>=1.70.0",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-http==1.34.1",
    "opentelemetry-instrumentation==0.55b1",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "langgraph>=0.5.1",
    "langgraph-cli>=0.3.4",
    "cassio>=0.1.10",
    "watchdog>=6.0.0",
    "ipykernel>=6.30.0",
    "chainlit>=2.6.5",
    "fiddler-langgraph @ https://test-files.pythonhosted.org/packages/54/42/e78b841b312058446b24a55673869ec0ba5b7cdccd7e616585a65b26bef8/fiddler_langgraph-0.1.0a16-py3-none-any.whl#sha256=61230d1cc8572376630b2f3b1cb23a71e0e8560cc52006f5f628abffc2ecb841",
    # Testing dependencies
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "pytest-cov>=4.0.0",
    # Linting and formatting
    "ruff>=0.1.0",
    # Type stubs
    "types-requests>=2.31.0",
]

authors = [{name = "Fiddler AI Team"}]
maintainers = [{name = "Fiddler AI Team"}]
package-mode = false

[tool.ruff]
# Ruff configuration for consistent code style
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable common linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore specific rules that may be too strict for this project
ignore = [
    "E501",  # line too long (handled by line-length setting)
    "B008",  # do not perform function calls in argument defaults
    "N806",  # variable in function should be lowercase (for ML variables)
]

[tool.ruff.lint.per-file-ignores]
# Allow longer lines in test files for test data
"tests/**" = ["E501"]
# Allow unused imports in __init__.py files
"**/__init__.py" = ["F401"]

[tool.ruff.format]
# Use ruff's formatter (like black)
quote-style = "double"
indent-style = "space"
line-ending = "auto"
